<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".Activities.ui.car.CarFragment">

    <ImageView
        android:id="@+id/carimg"
        android:layout_width="245dp"
        android:layout_height="159dp"
        android:layout_above="@+id/carname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="45dp"
        android:src="@drawable/ic_car_black_24dp"
        tools:ignore="ContentDescription,UnknownIdInLayout" />

    <EditText
        android:id="@+id/carname"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/carnumber"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:hint="@string/car_name"
        android:background="@drawable/reg_ediit_text_style"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/carnumber"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/carmodel"
        android:layout_marginBottom="24dp"
        android:layout_centerHorizontal="true"
        android:hint="Car Number"
        android:background="@drawable/reg_ediit_text_style"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        tools:ignore="Autofill,HardcodedText,SpUsage" />

    <EditText
        android:id="@+id/carmodel"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/caryear"
        android:layout_marginBottom="24dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/car_model"
        android:background="@drawable/reg_ediit_text_style"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/caryear"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/carInsurance"
        android:layout_marginBottom="24dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/car_year"
        android:background="@drawable/reg_ediit_text_style"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/carInsurance"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="168dp"
        android:autofillHints=""
        android:background="@drawable/reg_ediit_text_style"
        android:hint="@string/insurance_number"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <Button
        android:id="@+id/carsubmit"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:background="@drawable/reg_btn_style"
        android:text="@string/signin"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <ProgressBar
        android:id="@+id/carprogress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/carsubmit"
        android:layout_alignTop="@+id/carsubmit"
        android:layout_alignEnd="@+id/carsubmit"
        android:layout_alignBottom="@+id/carsubmit"
        android:layout_marginStart="41dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toTopOf="@+id/loginButton" />

</RelativeLayout>
