<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        tools:context=".Activities.ui.profile.ProfileFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toTopOf="@+id/RegName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.456"
            >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/profile" />
        </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="337dp" />

        <TextView
            android:id="@+id/RegName"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:background="@drawable/reg_ediit_text_style"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/RegEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/RegEmail"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/reg_ediit_text_style"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textEmailSubject"
            app:layout_constraintBottom_toTopOf="@+id/Regpass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Regpass"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:autofillHints=""
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/reg_ediit_text_style"
        android:ems="10"
        android:hint="Password"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textEmailSubject"
        app:layout_constraintBottom_toTopOf="@+id/mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
            android:id="@+id/mobile"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
        android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/reg_ediit_text_style"
            android:ems="10"
            android:hint="Mobile No"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/LicenceNo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/LicenceNo"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:autofillHints=""
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/reg_ediit_text_style"
        android:ems="10"
        android:hint="@string/driving_licence_no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>